@@ -1,5 +1,11 @@
 2023-02-04  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl.c (pkl_constant_fold): Get an ast argument and avoid
+	duplicating ast node uids.
+	* libpoke/pkl-gen.pks (aoref): Update call accordingly.
+
+2023-02-04  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.c: Add note to pkl_ast_sizeof_type comment.
 	* libpoke/pkl.h: Prototype for pkl_constant_fold.
 	* libpoke/pkl.c (pkl_constant_fold): New function.
